Sync all content

--- a/content/resources/11-433jf08-th.md
+++ b/content/resources/11-433jf08-th.md
@@ -8,7 +8,8 @@ file_size: 21849
 file_type: image/jpeg
 image_metadata:
   caption: New homes are quickly replacing farmland in this suburb west of Des Moines,
-    Iowa. (Image courtesy of Lynn Betts, [USDA Natural Resources Conservation Service](https://www.nrcs.usda.gov/wps/portal/nrcs/site/national/home/).)
+    Iowa. (Image courtesy of Lynn Betts, {{% resource_link "11be99bc-d401-4b10-b1f6-831ef2380d41"
+    "USDA Natural Resources Conservation Service" %}}.)
   credit: ''
   image-alt: Suburban community filled with new houses.
 learning_resource_types: []
