Sync all content

--- a/content/resources/11-433jf08-th.md
+++ b/content/resources/11-433jf08-th.md
@@ -6,10 +6,11 @@ description: 'New homes are quickly replacing farmland in this suburb west of De
 file: /courses/11-433j-real-estate-economics-fall-2008/e885d7e0547da62a193b98b771f29da8_11-433jf08-th.jpg
 file_size: 21849
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: New homes are quickly replacing farmland in this suburb west of Des Moines,
-    Iowa. (Image courtesy of Lynn Betts, {{% resource_link "11be99bc-d401-4b10-b1f6-831ef2380d41"
-    "USDA Natural Resources Conservation Service" %}}.)
+    Iowa. (Image courtesy of Lynn Betts, [USDA Natural Resources Conservation Service](https://www.nrcs.usda.gov/wps/portal/nrcs/site/national/home/).)
   credit: ''
   image-alt: Suburban community filled with new houses.
 learning_resource_types: []
