--- a/content/resources/ps4_08.md
+++ b/content/resources/ps4_08.md
@@ -4,6 +4,8 @@ description: Assignment on metro transit evaluation.
 file: /courses/11-433j-real-estate-economics-fall-2008/31437025b83603921b5eb10b6b5ca393_ps4_08.pdf
 file_size: 269979
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Assignments
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
