--- a/content/resources/rec3_2008.md
+++ b/content/resources/rec3_2008.md
@@ -5,6 +5,8 @@ description: Recitation notes on housing attributes and density, simple Richardi
 file: /courses/11-433j-real-estate-economics-fall-2008/2da0fbe3e661ba8432e19b62171a646a_rec3_2008.pdf
 file_size: 322153
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Recitations
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
