--- a/content/resources/wk10.md
+++ b/content/resources/wk10.md
@@ -5,6 +5,8 @@ description: Lecture presentation on macro analysis of non-residential property,
 file: /courses/11-433j-real-estate-economics-fall-2008/556ba5c88f5c54cbf8a3b8d93478898f_wk10.pdf
 file_size: 703900
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Lecture Notes
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
