--- a/content/resources/wk11.md
+++ b/content/resources/wk11.md
@@ -4,6 +4,8 @@ description: Lecture presentation on real estate cycles and time series analysis
 file: /courses/11-433j-real-estate-economics-fall-2008/8081c850ed13d6aa67e35f6c7250f8d1_wk11.pdf
 file_size: 419018
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Lecture Notes
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
