--- a/content/resources/11-433jf08.md
+++ b/content/resources/11-433jf08.md
@@ -5,10 +5,11 @@ description: New homes are quickly replacing farmland in this suburb west of Des
 file: /courses/11-433j-real-estate-economics-fall-2008/4d913099abe0c4065b853fd3503fc5cf_11-433jf08.jpg
 file_size: 156415
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: New homes are quickly replacing farmland in this suburb west of Des Moines,
-    Iowa. (Image courtesy of Lynn Betts, {{% resource_link "11be99bc-d401-4b10-b1f6-831ef2380d41"
-    "USDA Natural Resources Conservation Service" %}}.)
+    Iowa. (Image courtesy of Lynn Betts, [USDA Natural Resources Conservation Service](https://www.nrcs.usda.gov/wps/portal/nrcs/site/national/home/).)
   credit: ''
   image-alt: Suburban community filled with new houses.
 learning_resource_types: []
