--- a/content/resources/exam1_2007.md
+++ b/content/resources/exam1_2007.md
@@ -5,6 +5,8 @@ description: 'Mid term exam on real estate economics from the 2007 version of th
 file: /courses/11-433j-real-estate-economics-fall-2008/fa5f28bf94f969be9667a1191b447f4b_exam1_2007.pdf
 file_size: 79019
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Exams
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
