--- a/content/resources/exam2_2007.md
+++ b/content/resources/exam2_2007.md
@@ -4,6 +4,8 @@ description: Final exam on real estate economics from the 2007 version of the co
 file: /courses/11-433j-real-estate-economics-fall-2008/5492911a2900cc5bb5b07c89ee4fa0ba_exam2_2007.pdf
 file_size: 88709
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Exams
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
