--- a/content/resources/ps1_08.md
+++ b/content/resources/ps1_08.md
@@ -5,6 +5,8 @@ description: 'Assignment on comparative statics: predicting changes in real esta
 file: /courses/11-433j-real-estate-economics-fall-2008/cc5469d7670183e1760620463d501254_ps1_08.pdf
 file_size: 132403
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Assignments
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
