--- a/content/resources/ps5_08.md
+++ b/content/resources/ps5_08.md
@@ -4,6 +4,8 @@ description: Assignment on time series analysis of Atlanta's apartment market.
 file: /courses/11-433j-real-estate-economics-fall-2008/2665c88235812c5a9008d49da1772944_ps5_08.pdf
 file_size: 189626
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Assignments
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
