--- a/content/resources/rec2_2008.md
+++ b/content/resources/rec2_2008.md
@@ -5,6 +5,8 @@ description: Recitation notes on rent gradient and land price, Richardian theory
 file: /courses/11-433j-real-estate-economics-fall-2008/edf6829e681d71f4c875a01a973e63ca_rec2_2008.pdf
 file_size: 188483
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Recitations
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
