--- a/content/resources/rec9_2008.md
+++ b/content/resources/rec9_2008.md
@@ -4,6 +4,8 @@ description: Recitation notes on public good and externality.
 file: /courses/11-433j-real-estate-economics-fall-2008/6120f5776492a5f9bfc57791c5522b7d_rec9_2008.pdf
 file_size: 527688
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Recitations
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
