--- a/content/resources/wk12.md
+++ b/content/resources/wk12.md
@@ -4,6 +4,8 @@ description: Lecture presentation on regional growth and real estate markets.
 file: /courses/11-433j-real-estate-economics-fall-2008/b522e4bd9b9ec6f2e23507f99dd005de_wk12.pdf
 file_size: 322824
 file_type: application/pdf
+hide_download: true
+hide_download_original: null
 learning_resource_types:
 - Lecture Notes
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
